syntax = "proto3";

option csharp_namespace = "GrpcCommon";

package helloworld;

service HelloWorld {
  rpc Introducing (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
